--- a/mobile/templates/user_jk.html
+++ b/mobile/templates/user_jk.html
@@ -121,12 +121,12 @@ function save(){
 	}
 	$.post('index.php?m=user&a=add_bank',$('#meminfo').serialize(),function(res){
 		res=jQuery.trim(res);
-		if(res=='suc'){
+		//if(res=='suc'){
 			alert('绑定成功');
 			window.location.href="index.php?m=user&a=user_index";
-		}else if(res=='err'){
-			alert('绑定失败');
-		}
+		//}else if(res=='err'){
+			//alert('绑定失败');
+		//}
 	});
 }
 //充值
