--- a/mobile/templates/yimiao_submit.html
+++ b/mobile/templates/yimiao_submit.html
@@ -39,7 +39,7 @@ select,input{color:#555;}
 	<div style="margin-left:5px;height:40px;line-height:40px;margin-bottom:-20px;font-size:18px;font-weight:bold;color:#ff7101;">任务提报:</div>
 	<div class="tabs_info">
 		<div class="input_group">
-			<input style="text-indent:4em;" type="text" name="num[num]" value="" placeholder="请输入正整数" />
+			<input style="text-indent:4em;" type="text" name="num[num]" value="" placeholder="请输入数值" />
 			<div class="title">数量：</div>
 		</div>
 	</div>
