Signed-off-by: hanbing <hanbing@qq.com>

--- a/home/user/templates/index.html
+++ b/home/user/templates/index.html
@@ -24,7 +24,7 @@
 <div class="manage-menu">
 	<div class='serch_middle_div'>
 		<{if $smarty.get.type==1}>
-		<span style='float:left;line-height:35px;font-weight:bold;'>个人用户人数：<{$countnum}></span>
+		<span style='float:left;line-height:35px;font-weight:bold;'>个人用户人数：<{$countnum}> | 本日平台活跃量：<{$activenum}></span>
 		<{else}>
 		<span style='float:left;line-height:35px;font-weight:bold;'>企业用户人数：<{$countnum}></span>
 		<{/if}>
