--- a/home/user/templates/detail_company.html
+++ b/home/user/templates/detail_company.html
@@ -120,6 +120,22 @@
 											<input type="radio" name="info[is_see]" id="optionsRadios1" value="1" <{if $vo.is_see==1}>checked<{/if}> > <label for="optionsRadios1">是</label>
 										</div>
 									</div>
+									<div class="shop_sort">
+										<div class="shop_sort_title">
+											<h4>营业执照：</h4>
+										</div>
+										<div class="shop_sort_set">
+											<{if $vo.bank_card}><img src="../../data/image_c/<{$vo.bank_card}>" style="max-width:400px;" /><{/if}>
+										</div>
+									</div>
+									<div class="shop_sort">
+										<div class="shop_sort_title">
+											<h4>法人身份证照：</h4>
+										</div>
+										<div class="shop_sort_set">
+											<{if $vo.pic}><img src="../../data/image_c/<{$vo.pic}>" style="max-width:400px;" /><{/if}>
+										</div>
+									</div>
 									<div class="shop_sort" style="margin-top:10px;">
 										<div class="shop_sort_title">
 											<h4></h4>
