--- a/mobile/templates/user_add_company.html
+++ b/mobile/templates/user_add_company.html
@@ -15,6 +15,9 @@
 <link rel="stylesheet" type="text/css" href="css/global.css"/>
 <link rel="stylesheet" type="text/css" href="css/main.css"/>
 <script src="js/jquery.min.js"></script>
+<style type="text/css">
+.tabs_info .upload_pic1,.tabs_info .upload_pic2{width:150px;margin:15px auto 0px;height:105px;}
+</style>
 </head>
 <body style="background-color:#F6F6F6;">
 <div class="main">	
@@ -102,11 +105,85 @@
 			<textarea style="text-indent:6em;padding:5px;" name="str[introduce]"><{$vo.introduce}></textarea>
 			<div class="title" style="top:1.5em;">公司介绍：</div>
 		</div>
+		<input type="hidden" id='bank_card' name='str[bank_card]' value='' />
+		<div class="input_group" onclick="up_pic1()">
+			<img class="upload_pic1" src="<{if $vo.bank_card}>/data/image_c/<{$vo.bank_card}><{else}>images/upload_yyzz.jpg<{/if}>" />
+		</div>
+		<input type="hidden" id='pic' name='str[pic]' value='' />
+		<div class="input_group" onclick="up_pic2()">
+			<img class="upload_pic2" src="<{if $vo.pic}>/data/image_c/<{$vo.pic}><{else}>images/upload_sfz.jpg<{/if}>" />
+		</div>
 	</div>
 	</form>
 	<a href="javascript:void(0);"><div class="register_end" style="width:96%;" onclick="save()">确定</div></a>	
-</div><{include file="footer.html"}>
+</div>
+<!-- 上传照片 -->
+<div style="visibility:hidden;">
+	<iframe name='img-frame1' id="img-frame1" style="visibility:hidden;height:1px"></iframe>
+	<form id="img-form1" action="upload_img.php" enctype="multipart/form-data" method="post" target="img-frame1">
+		<input type="file" name="imgfile" value="" id="img-file1" onchange="changeValImg1()"/>
+	</form>
+</div>
+<div style="visibility:hidden;">
+	<iframe name='img-frame2' id="img-frame2" style="visibility:hidden;height:1px"></iframe>
+	<form id="img-form2" action="upload_img.php" enctype="multipart/form-data" method="post" target="img-frame2">
+		<input type="file" name="imgfile" value="" id="img-file2" onchange="changeValImg2()"/>
+	</form>
+</div>
+<{include file="footer.html"}>
 <script type="text/javascript">
+function up_pic1(){
+	$('#img-file1').click();
+	$('#img-frame1').load(function(){
+        try{var html = $(this).contents().find('body').html();
+    	}catch(e){ var html = window.frames["img-frame1"].document.body.innerText;}
+    	try{
+			var result = $.parseJSON(html);
+			if(result.success==1){
+				setTimeout(function(){
+					$('#loading').hide();
+				},1000)
+				$(".upload_pic1").attr('src',"/data/image_c/"+result.data.path);
+				$("#bank_card").val(result.data.path);
+			}else{
+				setTimeout(function(){
+					$('#loading').hide();
+				},1500)
+				alert("照片太大或其他错误");
+			}
+    	}catch(e){}
+    });
+}
+function up_pic2(){
+	$('#img-file2').click();
+	$('#img-frame2').load(function(){
+        try{var html = $(this).contents().find('body').html();
+    	}catch(e){ var html = window.frames["img-frame2"].document.body.innerText;}
+    	try{
+			var result = $.parseJSON(html);
+			if(result.success==1){
+				setTimeout(function(){
+					$('#loading').hide();
+				},1000)
+				$(".upload_pic2").attr('src',"/data/image_c/"+result.data.path);
+				$("#pic").val(result.data.path);
+			}else{
+				setTimeout(function(){
+					$('#loading').hide();
+				},1500)
+				alert("照片太大或其他错误");
+			}
+    	}catch(e){}
+    });
+}
+function changeValImg1(){
+	$('#loading').show();
+	$('#img-form1').submit();
+}
+function changeValImg2(){
+	$('#loading').show();
+	$('#img-form2').submit();
+}
 function save(){
 	if($('input[name="str[nickname]"]').val()==''){
 		alert("请填写公司名");return;
