--- a/mobile/templates/job_form.html
+++ b/mobile/templates/job_form.html
@@ -57,12 +57,12 @@ select,input{color:#555;}
 				<option value="B1">B1</option>
 				<option value="B2">B2</option>
 			</select>
-		</div>
-		<div class="input_group" style="margin-top:10px;">
-			<input type="checkbox" name="num[is_jsz]" value="1" id="check1" /><label for="check1">驾驶证</label>
-			&nbsp;&nbsp;&nbsp;
-			<input type="checkbox" name="num[is_clz]" value="1" id="check2" /><label for="check2">车辆照片</label>
 		</div> -->
+		<div class="input_group" style="margin-top:10px;">
+			<input type="checkbox" name="license[]" value="注册赠券" id="check1" /><label for="check1">注册赠券</label>
+			&nbsp;&nbsp;&nbsp;
+			<input type="checkbox" name="license[]" value="消费赠券" id="check2" /><label for="check2">消费赠券</label>
+		</div>
 	</div>
 	</form>
 	<div style="height:10px;"></div>
