--- a/mobile/templates/user_jk.html
+++ b/mobile/templates/user_jk.html
@@ -59,34 +59,34 @@ margin: 0 2%;
 	</div>
 	<div>
 		<input id="cz_input" type="text" name="money" value="" placeholder="请输入金额(数值型，单位元)" />
-		<div class="chongzhi" onclick="chongzhi()">充值</div>
+		<div class="chongzhi" style="width:13%;float:right;margin-right:2%;" onclick="chongzhi()">充值</div>
 	</div>
 	<div style="clear:both;"></div>
 	<div style="position:relative;width:100%;">
 		<div class="tabs_info">
 			<div style="margin-top:15px;font-size:14px;">绑定银行卡：</div>
 			<div class="input_group">
-				<input style="text-indent:5em;" type="text" name="str[bank_name]" value="<{$userRow.bank_name}>" placeholder="银行名称" />
+				<input style="text-indent:6em;" type="text" name="str[bank_name]" value="<{$userRow.bank_name}>" placeholder="银行名称" />
 				<div class="title">银行名称</div>
 			</div>
 			<div class="input_group">
-				<input style="text-indent:6.5em;" type="text" name="str[contact_name]" value="<{$userRow.contact_name}>" placeholder="X省X市X区XX支行" />
+				<input style="text-indent:7em;" type="text" name="str[contact_name]" value="<{$userRow.contact_name}>" placeholder="X省X市X区XX支行" />
 				<div class="title">开户行名称:</div>
 			</div>
 			<div class="input_group">
 				<div style="font-size:14px;color:#666;margin-top:5px;">注：若非吴江本地中国银行，将会根据异地/异行收取手续费2.5/5元不等</div>
 			</div>
 			<div class="input_group">
-				<input style="text-indent:5em;" type="text" name="str[bank_card]" value="<{$userRow.bank_card}>" placeholder="请输入卡号" />
+				<input style="text-indent:6em;" type="text" name="str[bank_card]" value="<{$userRow.bank_card}>" placeholder="请输入卡号" />
 				<div class="title">银行卡号</div>
 			</div>
 		</div>
-		<div class="bd_btn" onclick="save()">绑定</div>
+		<div class="bd_btn" style="width:13%;" onclick="save()">绑定</div>
 	</div>
 	<div style="height:25px;"></div>
 	<div>
 		<input id="tx_input" type="text" name="money" value="" placeholder="请输入金额(数值型，单位元)" />
-		<div class="tixian" onclick="tixian()">提现</div>
+		<div class="tixian" style="width:13%;float:right;margin-right:2%;" onclick="tixian()">提现</div>
 	</div>
 	<div style="height:10px;clear:both;"></div>
 	<div style="font-size:14px;color:#666;text-align:center;">申请提现成功后，将在24小时内转入你的绑定银行账户</div>
