--- a/mobile/templates/caiwu_sign_js.html
+++ b/mobile/templates/caiwu_sign_js.html
@@ -66,7 +66,7 @@ function change_money(id,obj){
 //确认结算
 function save(){
 	var tid=<{$smarty.get.tid}>;
-	$('#loading').show();
+	$('#loading').show(2000);
 	$.post('index.php?m=caiwu&a=sign_js',{tid:tid},function(res){
 		$('#loading').hide();
 		res=$.trim(res);
