--- a/mobile/templates/sign_index.html
+++ b/mobile/templates/sign_index.html
@@ -18,7 +18,7 @@
 	line-height: 1.5em;font-size: 1em;text-align: center;color:#323232;}
 	.bm5041_con_li div{float:left;}
 	.bm5041_con_li_1{width:25%;max-height:45px;overflow-y:hidden;}
-	.bm5041_con_li_3{width:35%;}
+	.bm5041_con_li_3{width:60%;}
 	.bm5041_con_li_4{width:25%;}
 	.bm5041_con_li_5{width:15%;}
 	.bm5041_con_li_6{width:15%;margin-top:5px;height:1.5rem;line-height:1.5rem;}
@@ -33,14 +33,14 @@
 </head>
 <body>
 <div class="bm5041">
-    <p class="bm5041_tit">共<{$signNum}>人报名</p>
+    <p class="bm5041_tit"><{$signNum}>人报名通过</p>
     <div class="bm5041_con">
         <form action="" id='meminfo'>
 			<{foreach from=$list item=v}>
 			<div class="bm5041_con_li <{if $v.is_valid==0}>redColor<{/if}>">
                 <div class="bm5041_con_li_1"><{$v.xuhao}>-<{$v.nickname}></div>
-                <div class="bm5041_con_li_3"><{$v.username}>-<{$v.district}></div>
-                <div class="bm5041_con_li_4"><{$v.distance}></div>
+                <div class="bm5041_con_li_3 <{if $v.sex=='男'}>man<{else}>woman<{/if}>"><{$v.sex}>-<{$v.username}>-<{$v.district}></div>
+                <!-- <div class="bm5041_con_li_4"><{$v.distance}></div> -->
 				<div class="bm5041_con_li_6">
 					<img onclick="refuse(this);" src="images/valid_<{if $v.is_valid==2}>off<{else}>on<{/if}>.png" />
 					<input type="hidden" name="info[valid_<{$v.id}>]" value='<{$v.is_valid}>' />
@@ -52,6 +52,7 @@
 	<!-- <div class="register_end" data-page="1" onclick="seeMore(this)">查看更多</div> -->
 	<div class="register_end" onclick="save();">确认</div>
 	<div style="color:#777;text-align:center;"><span style='color:#323232'>黑色</span>代表已经确认过的，<span style='color:red'>红色</span>代表待确认的</div>
+	<div style="color:#333;text-align:center;">男：<span id='man_span'><{$man_num}></span>人，女：<span id='woman_span'><{$woman_num}></span>人</div>
 </div>
 <{include file="footer.html"}>
 <script type="text/javascript">
@@ -112,8 +113,19 @@ function refuse(obj){
 var pageNum=1;
 var page_ajax=true;
 $(document).ready(function(){
+	//男女人数
+	var fact_man_num=0;var fact_woman_num=0;
+	for(var i=0;i<$('.man').length;i++){
+		if($('.man').eq(i).siblings('.bm5041_con_li_6').children('input').val()=='1') fact_man_num++;
+	}
+	for(var i=0;i<$('.woman').length;i++){
+		if($('.woman').eq(i).siblings('.bm5041_con_li_6').children('input').val()=='1') fact_woman_num++;
+	}
+	$('#man_span').text(fact_man_num);
+	$('#woman_span').text(fact_woman_num);
+							
     $(window).scroll(function(){
-        var bot = 50; //bot是底部距离的高度
+        var bot = 100; //bot是底部距离的高度
         if ((bot + $(window).scrollTop()) >= ($(document).height() - $(window).height())) {
 			if(page_ajax){
 				page_ajax=false;
@@ -131,15 +143,30 @@ $(document).ready(function(){
 								}else{
 									goodsStr+='<div class="bm5041_con_li">';
 								}
-								goodsStr+='<div class="bm5041_con_li_1">'+item.xuhao+item.nickname+'</div><div class="bm5041_con_li_3">'+item.username+'</div><div class="bm5041_con_li_4">'+item.distance+'</div><div class="bm5041_con_li_6">';
-								if(item.is_valid==2){
-									goodsStr+='<img onclick="refuse(this);" src="images/valid_off.png" />';
+								goodsStr+='<div class="bm5041_con_li_1">'+item.xuhao+'-'+item.nickname+'</div>';
+								if(item.sex=='男'){
+									goodsStr+='<div class="bm5041_con_li_3 man">'+item.sex+'-'+item.username+'-'+item.district+'</div>';
 								}else{
-									goodsStr+='<img onclick="refuse(this);" src="images/valid_on.png" />';
+									goodsStr+='<div class="bm5041_con_li_3 woman">'+item.sex+'-'+item.username+'-'+item.district+'</div>';
+								}
+								if(item.is_valid==2){
+									goodsStr+='<div class="bm5041_con_li_6"><img onclick="refuse(this);" src="images/valid_off.png" />';
+								}else{
+									goodsStr+='<div class="bm5041_con_li_6"><img onclick="refuse(this);" src="images/valid_on.png" />';
 								}
 								goodsStr+='<input type="hidden" name="info[valid_'+item.id+']" value="'+item.is_valid+'" /></div></div>';
 							})
 							$('#meminfo').append(goodsStr);
+							//男女人数
+							fact_man_num=0;fact_woman_num=0;
+							for(var i=0;i<$('.man').length;i++){
+								if($('.man').eq(i).siblings('.bm5041_con_li_6').children('input').val()=='1') fact_man_num++;
+							}
+							for(var i=0;i<$('.woman').length;i++){
+								if($('.woman').eq(i).siblings('.bm5041_con_li_6').children('input').val()=='1') fact_woman_num++;
+							}
+							$('#man_span').text(fact_man_num);
+							$('#woman_span').text(fact_woman_num);
 							page_ajax=true;
 						}
 					}
