Signed-off-by: hanbing <295079454@qq.com>

--- a/mobile/templates/caiwu_sign_js.html
+++ b/mobile/templates/caiwu_sign_js.html
@@ -51,7 +51,7 @@
         </form>
     </div>
 	<{if $countnum > 30}>
-		<div class="register_end" data-page="1" onclick="seeMore(this)">查看更多</div>
+		<!-- <div class="register_end" data-page="1" onclick="seeMore(this)">查看更多</div> -->
 	<{/if}>
 	<div class="register_end" onclick="save()">确认结算</div>
 	<div class="register_end" onclick="back_act()" style="margin-top:50px;">驳回处理</div>
