Signed-off-by: hanbing <295079454@qq.com>

--- a/mobile/templates/user_jk.html
+++ b/mobile/templates/user_jk.html
@@ -94,7 +94,7 @@ margin: 0 2%;
 		<div class="tixian" style="width:13%;float:right;margin-right:2%;" onclick="tixian()">提现</div>
 	</div>
 	<div style="height:10px;clear:both;"></div>
-	<div style="font-size:14px;color:#666;text-align:center;width:90%;margin:0 auto;">申请提现成功后，将在24小时内转入你的绑定银行账户，遇节假日顺延至工作日到账</div>
+	<div style="font-size:14px;color:#666;text-align:center;width:90%;margin:0 auto;">申请提现成功后，将在24小时内转入你的绑定银行账户，遇周末、假期顺延至工作日到账</div>
 </div>
 </form>
 <{include file="footer.html"}>
