Signed-off-by: hanbing <295079454@qq.com>

--- a/mobile/templates/user_index_personal.html
+++ b/mobile/templates/user_index_personal.html
@@ -100,7 +100,7 @@
 			<{if $userExtRow.group_id == 2}>
 				<a href="index.php?m=assign&a=dudao_index">
 				<li>
-					<div class="list_info">兼职任务</div>
+					<div class="list_info">工作任务</div>
 					<div class="next"><span class="fa fa-chevron-right" ></span></div>
 				</li>
 				</a>
