--- a/mobile/templates/assign_dudao_qd.html
+++ b/mobile/templates/assign_dudao_qd.html
@@ -17,9 +17,9 @@
 	.bm5041_con_li{width: 100%;height: 1.8em;line-height: 1.8em;font-size: 0.9em;border-bottom: 1px solid #CDCDCD;margin-top:5px;margin-bottom:15px;padding-bottom:15px;height: 1.5em;
 	line-height: 1.5em;font-size:1em;text-align: center;color:#323232;}
 	.bm5041_con_li div{float:left;}
-	.bm5041_con_li_1{width:25%;margin-left:2%;}
+	.bm5041_con_li_1{width:34%;margin-left:2%;}
 	.bm5041_con_li_2{width:10%;}
-	.bm5041_con_li_3{width:40%;}
+	.bm5041_con_li_3{width:35%;}
 	.bm5041_con_li_4{width:20%;}
 	.bm5041_con_li_5{width:15%;}
 	.bm5041_con_li_6{width:15%;margin-top:5px;height:1.5rem;line-height:1.5rem;}
@@ -37,12 +37,12 @@
 <body>
 <div class="bm5041">
 	<{if $list}>
-    <p class="bm5041_tit">实到<span id="fact_qd_num"></span>人</p>
+    <p class="bm5041_tit">共<span id="qd_num"></span>人</p>
     <div class="bm5041_con">
         <form action="" id='meminfo'>
 			<{foreach from=$list item=v}>
             <div class="bm5041_con_li <{if $v.is_qd == '0'}>redColor<{/if}>">
-                <div class="bm5041_con_li_1"><{$v.xuhao}>-<{$v.nickname}></div>
+                <div class="bm5041_con_li_1"><{$v.xuhao}>-<{$v.nickname}><{if $v.dudao_uid!=0}><span style="font-size:12px;">(指定)</span><{/if}></div>
                 <div class="bm5041_con_li_2"><{$v.sex}></div>
                 <div class="bm5041_con_li_3"><a href="tel:<{$v.username}>"><{$v.username}></a></div>
 				<div class="bm5041_con_li_6">
@@ -55,6 +55,7 @@
     </div>
 	<div class="register_end" onclick="save();">确认</div>
 	<div style="color:#777;text-align:center;"><span style='color:#323232'>黑色</span>代表已经确认过的，<span style='color:red'>红色</span>代表待确认的<br />确认之后才可以追加报名</div>
+	<div style="color:#777;text-align:center;">实到<span style='color:#323232' id="fact_qd_num">0</span>人，男：<span id='man_span'>0</span>人，女：<span id='woman_span'>0</span>人</div>
 	<{/if}>
 	<div style="height:10px;"></div>
 	<div class="register_end" id="addSign" style="height:35px;line-height:35px;font-size:16px;width:90%;">追加报名</div>
@@ -161,12 +162,25 @@ $(function(){
 		$(".fullbg").hide();
 		$(".box_pop").hide(); 
 	});
-	//实到人数
+	//总人数、实到人数、男女人数
+	var qd_num=0;
 	var fact_qd_num=0;
+	var fact_man_num=0;var fact_woman_num=0;
 	for(var i=0;i<$('.qd_input').length;i++){
-		if($('.qd_input').eq(i).val()=='1') fact_qd_num++;
+		qd_num++;
+		if($('.qd_input').eq(i).val()=='1'){
+			fact_qd_num++;
+			if($('.bm5041_con_li_2').eq(i).text()=='男'){
+				fact_man_num++;
+			}else{
+				fact_woman_num++;
+			}
+		}
 	}
+	$('#qd_num').text(qd_num);
 	$('#fact_qd_num').text(fact_qd_num);
+	$('#man_span').text(fact_man_num);
+	$('#woman_span').text(fact_woman_num);
 	//群发消息
 	$('#qunfa_confirm').click(function(){
 		if($('.redColor').length > 0){
